tests/ui/parser/issues/issue-67377-invalid-syntax-in-enum-discriminant.stderr
error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:5:27
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |             -             ^              ^ mismatched closing delimiter
   |             |             |
   |             |             unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:12:24
   |
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |             -          ^           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: mismatched closing delimiter: `]`
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:19:24
   |
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |             -          ^           ^ mismatched closing delimiter
   |             |          |
   |             |          unclosed delimiter
   |             closing delimiter possibly meant for this

error: this file contains an unclosed delimiter
  --> $DIR/issue-67377-invalid-syntax-in-enum-discriminant.rs:23:65
   |
LL |         V = [PhantomData; { [ () ].len() ].len() as isize,
   |                                          - missing open `[` for this delimiter
...
LL |         V = [Vec::new; { [].len()  ].len() as isize,
   |                                    - missing open `[` for this delimiter
...
LL | mod c {
   |       - unclosed delimiter
LL |     enum Bug {
LL |         V = [Vec::new; { [0].len() ].len() as isize,
   |                                    - missing open `[` for this delimiter
...
LL | fn main() {}
   |                                                                ^

error: aborting due to 4 previous errors

